Remove classe .truncate inválida do CSS

--- a/index.html
+++ b/index.html
@@ -27,5 +27,5 @@
       mix-blend-mode:soft-light
     }
     .spark{ animation:s 6s linear infinite }
-    @keyframes s{ 0%{transform:translateY(0)} 100%{transform:translateY(-40px)} }
-    .truncate
+    @keyframes s{ 0%{transform:translateY(0)} 100%{transform:translateY(-40px)}
+}
